# UpTimeTimer

./: CMakeLists.txt  main.cpp  timerwidget.cpp  timerwidget.h
